--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ button {
   border-color: #6A35C1;
   border-radius: 15px;
   padding: 5px;
+  border-width: 4px;
 }
 
 button:hover {
@@ -37,13 +38,15 @@ cursor: pointer;
 }
 
 .center-content {
-  background-color:darkblue;
+  display: flex;
+  flex-direction: column;
+  background-color:#FDF7FF;
   max-height: 430px;
   max-width: 430px;
   border: solid;
-  border-color:darkblue;
+  border-color:#6A35C1;
   border-radius: 15px;
-  color:lime;
+  color:#6A35C1;
   flex-grow: 1;
 }
 
@@ -62,4 +65,23 @@ cursor: pointer;
   display: flex;
   flex-direction: column;
   gap: 40px;
+}
+
+ 
+.display-text {
+  padding: 0px 20px;
+  font-size: larger;
+}
+
+li {
+  font-size: larger;
+}
+
+#start-btn {
+  align-self: center;
+  font-size:x-large;
+  padding: 15px;
+  margin-top: 30px;
+  border-width: 5px;
+
 }
