--- a/style.css
+++ b/style.css
@@ -67,21 +67,13 @@ cursor: pointer;
   gap: 40px;
 }
 
- 
-.display-text {
+ .intro-text {
   padding: 0px 20px;
-  font-size: larger;
+  font-size:20px;
 }
 
 li {
-  font-size: larger;
+  font-size: 20px;
 }
 
-#start-btn {
-  align-self: center;
-  font-size:x-large;
-  padding: 15px;
-  margin-top: 30px;
-  border-width: 5px;
 
-}
