--- a/style.css
+++ b/style.css
@@ -30,11 +30,21 @@ button {
   border-radius: 15px;
   padding: 5px;
   border-width: 4px;
+  transition: all 0,8s;
+  
 }
 
-button:hover {
+/*button:hover {
 background-color:#6A35C1;
 cursor: pointer;
+}*/
+
+.clicked {
+  transform: scale(2);
+  border-color:orangered;
+  box-shadow: 0 0 10px orangered;
+  border-radius: 15px;
+  border-width: 4px;
 }
 
 .center-content {
