--- a/style.css
+++ b/style.css
@@ -30,19 +30,16 @@ button {
   border-radius: 15px;
   padding: 5px;
   border-width: 4px;
-  transition:all 0,8s;
-  
+  transition:all 1s;
 }
 
-/*button:hover {
-background-color:#6A35C1;
+.user-btn:hover {
 cursor: pointer;
-}*/
+}
 
 .clicked {
-  transform: scale(2);
-  border-color:orangered;
-  box-shadow: 0 0 10px orangered;
+  transform: scale(1.1);
+  background-color:#6A35C1;
   border-radius: 15px;
   border-width: 4px;
 }
@@ -55,7 +52,6 @@ cursor: pointer;
 .container {
   display: flex;
   justify-content: space-evenly;
-  margin-top: 0px;
 }
 
 .left-content {
@@ -72,8 +68,7 @@ cursor: pointer;
   justify-content: space-around;
 }
 
-
-.center-bottom, .center-top{
+.center-computer, .center-user{
   margin: 20px;
   background-color:#6A35C1;
   width: 100%;
@@ -87,16 +82,10 @@ cursor: pointer;
   flex-basis: 50%;
 }
 
-h2 {
+h2, p {
   display: flex;
   justify-content: center;
 }
-
-p {
-  display: flex;
-  justify-content: center
-}
-
 
 .refresh-sect {
   display: flex;
@@ -121,5 +110,5 @@ p {
 
 .modal::backdrop{
   background: linear-gradient(45deg, purple, blue);
-  opacity: .6;
+  opacity: .4;
 }
